tried to get footer to stop covering my circles

--- a/app/static/results.css
+++ b/app/static/results.css
@@ -248,3 +248,8 @@ h2 {
       );
     }
   } */
+
+  .popular-topics {
+    padding-bottom: 150px;
+    margin-bottom: 50px;
+  }
